# uc-declarative-abac

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
deploy/: action.yml
docs/: implementation_design.md
govern/: action.yml
src/uc_abac_governor/: __main__.py  discovery.py  governor.py  logger.py  models.py  resolver.py  types.py
src/uc_abac_governor/configs/: consolidator.py  models.py  resolver.py
src/uc_abac_governor/governed_tags/: compiler.py  differ.py  executor.py  state.py
src/uc_abac_governor/helpers/: __init__.py  account.py  unity_catalog.py  workspace.py
src/uc_abac_governor/policies/: compiler.py  differ.py  executor.py  state.py
src/uc_abac_governor/principals/: resolver.py  state.py
src/uc_abac_governor/tags/: compiler.py  (+3 more)
src/uc_declarative_abac/: __main__.py  governor.py  logger.py  orchestrator.py  types.py  utils.py
src/uc_governor/: __main__.py  discovery.py  governor.py  logger.py  models.py  resolver.py  types.py
sync/: action.yml
tests/: conftest.py  test_discovery.py  test_governor.py  test_logger.py  test_models.py  test_resolver.py
tests/e2e/: conftest.py  test_uc_abac_governor.py  test_uc_abac_orchestrator.py  test_uc_declarative_abac.py  test_uc_governor.py
tests/helpers/: test_account.py  test_unity_catalog.py
tests/privileges/: test_compiler.py  test_differ.py  test_executor.py
tests/tags/: test_compiler.py  test_differ.py  test_executor.py
tests/unit/: conftest.py  test_discovery.py  test_governor.py  test_logger.py  test_models.py  test_orchestrator.py  test_resolver.py  test_utils.py
(+151 files in other folders)
