[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uc-declarative-abac"
version = "0.1.0"
description = "Declarative ABAC governance engine for Databricks Unity Catalog"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "databricks-sdk>=0.20.0",
]

[project.scripts]
uc-declarative-abac = "uc_declarative_abac.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uc_declarative_abac"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "sqlglot>=20.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]
addopts = "--cov=uc_declarative_abac --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
